Improve CI and local build (#9)
 - remove EOL Neo4j, Spark and Python versions
 - add missing Spark & Neo4j versions
 - remove unused Scala version (2.11)
 - simplify matrix exclusion
 - make the local build work of the box
 - add support for all active LTS JDK